syntax = "proto3";

package com.road.yishi.proto.item;

message PlayerBottleMsg {
  int32 userId = 1;
  string nickName = 2;
  bool isVip = 3;
  int32 state = 4;
}
